# Whispact

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: check.yml
src/: App.vue  main.ts  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  utils.rs
src/components/: MessageInput.vue  disposable.vue  hello.vue  option.vue  progress-linear.vue  touch-prompt.vue
src/plugins/: vuetify.ts
src/router/: index.ts
src/utils/: api.ts  utils.ts
src/views/: DisposablePage.vue  EditView.vue  HomePage.vue  LogPage.vue  MailboxPage.vue  PlanPage.vue  PromptPage.vue  ReadingPage.vue  SealPage.vue  SettingPage.vue
tauri-plugin-blep/: Cargo.toml  README.md
tauri-plugin-blep/android/: build.gradle.kts
tauri-plugin-blep/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-blep/android/src/main/: AndroidManifest.xml
tauri-plugin-blep/android/src/main/java/: BlePeripheral.kt  BlePeripheralPlugin.kt
tauri-plugin-blep/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-blep/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-blep/examples/vanilla/src-tauri/capabilities/: default.json
tauri-plugin-blep/examples/vanilla/src-tauri/src/: lib.rs
tauri-plugin-blep/permissions/autogenerated/: reference.md
tauri-plugin-blep/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-nfc2/: Cargo.toml  README.md
(+15 files in other folders)
